# stupidex

./: .gitignore  .stupidex_todos.json  2026-06-20-full-sweep-all-findings.md  CONCEPTS.md  FIXES.md  ISSUE.md  PLAN_THEMES.md  README.md  TODO.md  main.py  main.tcss  pyproject.toml  todo-completed-fixes.md  todo-pendings-fixes.md
.github/workflows/: lint.yml  test.yml
.stupidex/rag/: index.db
docs/: code-review-sweep-plan.md
docs/brainstorms/: mcp-client-requirements.md  multi-providers-requirements.md  session-saving.md  web-fetch.md
docs/code-review-reports/: 2026-06-20-branch-review.md  2026-06-20-full-sweep-all-findings.md  2026-06-20-full-sweep.md
docs/plans/: 2025-06-18-001-feat-session-saving-to-disk-plan.md  2026-06-18-001-feat-multi-provider-support-plan.md  2026-06-19-001-feat-tui-configuration-management-plan.md  2026-06-19-001-feat-web-fetch-tool-plan.md  2026-06-19-001-fix-sidebar-flicker-race-condition-plan.md  2026-06-20-001-fix-p1-code-review-findings-plan.md  rag-pipeline.md  (+11 more)
examples/: ask_question_cli.py  demo_ask_question.py
llm/: handle_input.py
tests/: test_agent.py  test_ask_question.py  test_ast_commands.py  test_ast_config.py  test_ast_indexer.py  test_ast_parser.py  test_ast_store.py  test_ast_tools.py  test_chain.py  test_dynamic_system_prompt.py  test_exec.py  test_file_manipulation.py  test_input_modal.py  test_mcp_config.py  test_mcp_example_server.py  test_mcp_lifecycle.py  test_mcp_registry.py  test_mcp_resource.py  test_mcp_schema.py  test_mcp_startup_timeout.py  test_message.py  test_picker.py  test_providers_config.py  test_providers_resolution.py  test_rag_chunker.py  test_rag_embedder.py  test_rag_incremental.py  test_rag_indexer.py  test_rag_robustness.py  test_rag_smoke.py  test_rag_store.py  test_rag_tools.py  test_search.py  test_session.py  test_session_commands.py  test_session_manager_contextvar.py  test_settings_screen.py  test_sidebar_collapsible.py  test_skill_domain.py  test_skill_tool_filtering.py  (+12 more)
(+178 files in other folders)
