[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stupidex"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "textual",
    "litellm",
    "httpx",
    "sys",
    "os",
    "difflib",
    "glob",
    "pathlib",
]

[project.scripts]
stupidex = "stupidex.main:main"

[tool.setuptools.packages.find]
where = ["src"]
